<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".Login.LoginFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Remesa Fácil Centro"
        android:textColor="#b8c6cf"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/logo_principal_app"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        />


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_marginEnd="20dp"
       android:layout_marginStart="20dp"
       android:layout_marginTop="20dp"
       >
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="40dp"
           android:gravity="center"
           android:text="@string/ingresar"
           android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
           android:textColor="@color/colorAccent"
           android:textStyle="bold" />

       <EditText
           android:id="@+id/et_email"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"
           android:hint="@string/correo"
           android:inputType="textEmailAddress"
           android:background="@drawable/background_rectangle"
           android:padding="10dp"
           android:textColor="@color/colorPrimary"
           android:textColorHint="@color/colorHint"
           android:textStyle="bold"
           />

       <EditText
           android:id="@+id/et_psw"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"
           android:hint="@string/contrase_a"
           android:inputType="textPassword"
           android:background="@drawable/background_rectangle"
           android:padding="10dp"
           android:textColor="@color/colorPrimary"
           android:textColorHint="@color/colorHint"
           android:textStyle="bold"
           />


       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="end"
           android:text="@string/olvide_mi_contrase_a"
           android:layout_marginEnd="10dp"
           android:textColor="@color/colorHint"
           android:textStyle="bold"
           android:id="@+id/tv_password"
           />

       <Button
           android:id="@+id/bt_singIn"
           android:layout_width="80dp"
           android:layout_height="70dp"
           android:layout_gravity="center"
           android:layout_marginTop="20dp"
           android:gravity="center"
           android:background="@drawable/boton_grande"
           android:text="@string/entrar"
           android:textAllCaps="false"
           android:textStyle="bold"
           android:textSize="20sp"
           android:theme="@style/AppTheme.Button" />


       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_margin="10dp"
           android:text="@string/no_estas_registrado_registrate_aqu"
           android:layout_marginEnd="10dp"
           android:textColor="@color/colorHint"
           android:textStyle="bold"
           android:id="@+id/tv_register"
           />
   </LinearLayout>

</LinearLayout>