<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_rectangle_white"
    android:orientation="vertical"
    android:id="@+id/ll_title"
    android:layout_margin="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_date"
            android:textColor="@color/colorHint"
            android:textStyle="bold"
            />
        <TextView
            android:layout_marginStart="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/tv_status"
            android:textColor="@color/colorHint"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/background_rectangle"
        android:padding="10dp"
        android:orientation="vertical"
        android:id="@+id/ll_view"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solicitud_"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textIsSelectable="true"
            android:textSize="17sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textIsSelectable="true"
            android:textSize="17sp"
            android:id="@+id/tv_request"
            android:layout_marginBottom="5dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            android:id="@+id/ll_comprobante"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ver_comprobante"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textIsSelectable="true"
                android:textSize="15sp"
                android:id="@+id/tv_image"
                />

            <ImageButton
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/boton_grande"
                android:layout_margin="5dp"
                android:src="@drawable/foto"
                android:id="@+id/bt_show"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_response"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            >
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorPrimaryDark"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Respuesta:"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textIsSelectable="true"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textIsSelectable="true"
                android:textSize="17sp"
                android:id="@+id/tv_answer"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/enviar_comprobante"
                android:gravity="center"
                android:id="@+id/tv_comprobante"
                />
            <ImageButton
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/boton_grande"
                android:layout_margin="5dp"
                android:src="@drawable/camara"
                android:id="@+id/bt_send"
                />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Button"
            android:text="@string/cancelar_solicitud"
            android:id="@+id/bt_cancel"
            android:layout_margin="10dp"
            />
    </LinearLayout>

</LinearLayout>